<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.slz</groupId>
	<artifactId>literacypro</artifactId>
	<version>1</version>
	<packaging>jar</packaging>
	<properties>
		<applicationUrl>http://www.google.com</applicationUrl>
		<surefire.fork.count>4</surefire.fork.count>
		<cucumber.version>1.1.8</cucumber.version>
		<selenium.version>2.43.0</selenium.version>
		<junit.version>4.11</junit.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<build>
	<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
					<useSystemClassLoader>false</useSystemClassLoader>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18</version>
				<executions>
					<execution>
						<id>acceptance-test</id>
						<phase>integration-test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<forkCount>${surefire.fork.count}</forkCount>
							<reuseForks>false</reuseForks>
							<argLine>-Duser.language=en</argLine>
							<argLine>-Xmx1024m</argLine>
							<argLine>-XX:MaxPermSize=256m</argLine>
							<argLine>-Dfile.encoding=UTF-8</argLine>
							<argLine>-DskipSurefireReport=true</argLine>
							<useFile>false</useFile>
							<includes>
								<include>**/CukeTestLpSearch.class</include>
							</includes>
							<testFailureIgnore>true</testFailureIgnore>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>
	<!-- Profiles start here -->
	<profiles>
		<!-- QA Env -->
		<profile>
			<id>qa</id>
			<properties>
				<env>qa</env>
				<app.url.csrep>https://qa-slz01.scholasticlearningzone.com/intl-custserv/login</app.url.csrep>
				<app.url.educator>http://educator.qa.scholasticlearningzone.com/</app.url.educator>
				<app.url.full>https://educator-qa-slz01.scholasticlearningzone.com/auth/intl/Login/AUST7RP</app.url.full>
			</properties>
		</profile>

		<!-- Staging Env -->
		<profile>
			<id>stg</id>
			<properties>
				<env>stage</env>
				<app.url.csrep>https://qa-slz01.scholasticlearningzone.com/intl-custserv/login</app.url.csrep>
				<app.url.educator>http://educator.qa.scholasticlearningzone.com/</app.url.educator>
				<app.url.full>https://educator-qa-slz01.scholasticlearningzone.com/auth/intl/Login/AUST7RP</app.url.full>
			</properties>
		</profile>

		<!-- Prod Env -->
		<profile>
			<id>prod</id>
			<properties>
				<env>prod</env>
				<app.url.csrep>https://scholasticlearningzone.com/intl-custserv/login</app.url.csrep>
				<app.url.educator>http://educator.scholasticlearningzone.com/</app.url.educator>
				<app.url.full>https://educator.scholasticlearningzone.com/auth/intl/Login/AUST7RP</app.url.full>
			</properties>
		</profile>
	</profiles>

	<!-- ALL DEPS -->
	<dependencies>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-jvm-deps</artifactId>
			<scope>test</scope>
			<version>1.0.3</version>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-picocontainer</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.picocontainer</groupId>
			<artifactId>picocontainer</artifactId>
			<version>2.14.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-firefox-driver</artifactId>
			<version>${selenium.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-server</artifactId>
			<version>${selenium.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit-dep</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>18.0</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>net.masterthought</groupId>
			<artifactId>cucumber-reporting</artifactId>
			<version>0.0.23</version>
		</dependency>
	</dependencies>

</project>